finished landing page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coding Quiz</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-
 <body>
-    
+    <h1 class="centertext">Welcome! Are you ready to test your coding knowledge?</h1>
+    <div class="start-btns">
+        <button id="exit-btn"><span class="btn-text">Exit</span></button>
+        <button id="start-btn"><span class="btn-text">Start</span></button>
+    </div>
+
+
+
 
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
