--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
         <button id="start-btn"><span class="btn-text">Start</span></button>
     </div>
 
+    <div class="quiz-box" 
+    style="width: 50%;
+        height: auto;
+        /* display: none; */
+        margin: auto;
+        background-color: white;
+        border: 5px black solid;
+        box-shadow: 2px 2px 10px black">
 
+        <p class="centertext">Question</p>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+    </div>
+
+    <div class="timer centertext">
+        <div class="timer-count">60</div>
+        <p>seconds remaining</p>
+    </div>
 
 
     <script type="text/javascript" src="./assets/script.js"></script>
